--- a/templates/home.html
+++ b/templates/home.html
@@ -8,20 +8,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
-    <h1 class="jumbotron text-center">Chatterbot in Python using Flask Framework</h1>
+    <h1 class="jumbotron text-center">Chatbot projekt STIN</h1>
 <div class="container">
     <div class="row">
         <div class="col-sm-6 offset-sm-3">
             <div id="chatbox" class="border border-success">
-                <p class="botText"><span>Hi! I'm Chatterbot</span></p>
+                <p class="botText"><span>Jaké máte otázky ?</span></p>
             </div>
             <div id="userInput">
-                <input id="textInput" class="form-control" type="text" name="msg" placeholder="Type Your Message Here">
-                <input id="buttonInput" class="btn btn-success form-control" type="submit" value="Send">
+                <input id="textInput" class="form-control" type="text" name="msg" placeholder="Zde piště otázku">
+                <input id="button_pressed" class="btn btn-success form-control" type="submit" value="Odeslat">
             </div>
         </div>
     </div>
-
+</div>
 <script>
     function getResponse() {
         let userText = $("#textInput").val();
@@ -36,12 +36,11 @@
 });
 }
     $("#textInput").keypress(function(e) {
-    //if enter key is pressed
-        if(e.which == 13) {
+        if(e.which === 13) { //Zmáčknutí enteru
             getResponse();
         }
     });
-    $("#buttonInput").click(function() {
+    $("#button_pressed").click(function() {
         getResponse();
     });
     </script>
