--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang ="cs">
 <head>
+    <title>ChatBot STIN</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
